<resources>
    <string name="app_name">Game</string>
    <string name="war_game">WarGame</string>
    <string name="PictureGame" translatable="false">PictureGame</string>

    <string name="play_picture_game">Login</string>
    <string name="createaccount">create account</string>
    <string name="create">create</string>

    <string name="next_game">next game</string>
    <string name="picturegamelabel">Objects to Find</string>
    <string name="playerBcard">playerBcard</string>
    <string name="playerAcard">playerAcard</string>
    <string name="play_war_game">play round</string>
    <string name="play_war_game_skip">Skip</string>
    <string name="empty_card">No card</string>
    <string name="playerAcurrentcard">Empty</string>
    <string name="playerBcurrentcard">Empty</string>

    <string name="main_description">Welcome!\n\nLog in to continue where you left off.\n\nIf
    you don\'t have an account, press the button below below to create one!</string>


    <string name="sudoku_welcome_4">Welcome to Sudoku level4</string>
    <string name="sudoku_num_1">1</string>
    <string name="sudoku_num_2">2</string>
    <string name="sudoku_num_3" translatable="false">3</string>
    <string name="sudoku_num_4">4</string>
    <string name="sudoku_num_5" translatable="false">5</string>
    <string name="sudoku_num_6">6</string>
    <string name="sudoku_num_7">7</string>
    <string name="sudoku_num_8">8</string>
    <string name="sudoku_num_9">9</string>
    <string name="sudokuchooseGame">Please Choose the level of difficulty</string>
    <string name="sudoku_level1">Level 1</string>
    <string name="sudoku_level2">Level 2</string>
    <string name="sudoku_level3">Level 3</string>
    <string name="sudoku_level4">Level 4</string>
    <string name="sudoku_end_this_game">End this game</string>
    <string name="sudoku_welcome_3">Welcome to Sudoku level3</string>
    <string name="sudoku_welcome_2">Welcome to sudoku level 2</string>
    <string name="picture_game">Picture Game</string>
    <string name="sudoku_welcome_1">Welcome to sudoku level 1</string>


</resources>
