<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WarGame.WarGameActivity">

    <ImageView
        android:id="@+id/playerBCard"
        android:layout_width="134dp"
        android:layout_height="129dp"
        android:contentDescription="@string/playerBcard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/card" />

    <ImageView
        android:id="@+id/playerCCard"
        android:layout_width="134dp"
        android:layout_height="129dp"
        android:layout_marginTop="128dp"
        android:contentDescription="@string/playerBcard"
        app:layout_constraintEnd_toStartOf="@+id/playerBCard"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/card" />

    <ImageView
        android:id="@+id/playerACard"
        android:layout_width="134dp"
        android:layout_height="129dp"
        android:contentDescription="@string/playerAcard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/card" />

    <TextView
        android:id="@+id/cardRemainingA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/playerACard"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935" />

    <TextView
        android:id="@+id/cardRemainingB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/playerBCard"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/cardRemainingC"
        android:layout_width="0dp"
        android:layout_height="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/playerBCard"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="113dp"
        android:layout_height="154dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/playerBcard"
        app:layout_constraintBottom_toTopOf="@+id/playerACard"
        app:layout_constraintEnd_toEndOf="@+id/playerACard"
        app:layout_constraintStart_toStartOf="@+id/playerACard"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/blankcard" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="113dp"
        android:layout_height="154dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/playerAcurrentcard"
        app:layout_constraintEnd_toEndOf="@+id/playerBCard"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="@+id/playerBCard"
        app:layout_constraintTop_toBottomOf="@+id/playerBCard"
        app:srcCompat="@drawable/blankcard" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="113dp"
        android:layout_height="154dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/playerBcard"
        app:layout_constraintStart_toStartOf="@+id/playerCCard"
        app:layout_constraintTop_toBottomOf="@+id/playerCCard"
        app:srcCompat="@drawable/blankcard" />

    <TextView
        android:id="@+id/currentCardA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_card"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <TextView
        android:id="@+id/currentCardB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_card"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <TextView
        android:id="@+id/currentCardC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_card"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.459" />

    <Button
        android:id="@+id/playButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="playRound"
        android:text="@string/play_war_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/skipButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="openScoreScreen"
        android:text="@string/play_war_game_skip"
        app:layout_constraintEnd_toEndOf="@+id/playButton2"
        app:layout_constraintStart_toStartOf="@+id/playButton2"
        app:layout_constraintTop_toBottomOf="@+id/playButton2" />

</androidx.constraintlayout.widget.ConstraintLayout>