<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/passwordInput2"
        android:layout_width="228dp"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="87dp"
        android:ems="10"
        android:fontFamily="@font/press_start_2p"
        android:hint="Password"
        android:inputType="textPersonName"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.566" />

    <EditText
        android:id="@+id/userNameInput2"
        android:layout_width="228dp"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="316dp"
        android:layout_marginEnd="87dp"
        android:ems="10"
        android:fontFamily="@font/press_start_2p"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="101dp"
        android:background="#9ABDFF"
        android:fontFamily="@font/press_start_2p"
        android:onClick="checkPlayer"
        android:text="@string/play_picture_game"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.715"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.688" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="185dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="101dp"
        android:background="#FF9ABDFF"
        android:fontFamily="@font/press_start_2p"
        android:onClick="createAccount"
        android:text="@string/createaccount"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="293dp"
        android:layout_height="161dp"
        android:fontFamily="@font/press_start_2p"
        android:lineSpacingExtra="2sp"
        android:text="@string/main_description"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.252"
        tools:text="@string/main_description" />

    <ImageView
        android:id="@+id/accountView"
        android:layout_width="360dp"
        android:layout_height="401dp"
        android:layout_marginBottom="156dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@color/colorPrimary" />

    <Button
        android:id="@+id/button"
        android:layout_width="145dp"
        android:layout_height="52dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="101dp"
        android:background="#FF9ABDFF"
        android:fontFamily="@font/press_start_2p"
        android:onClick="createPlayer"
        android:text="@string/create"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.726"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backColour"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/colourInput"
        android:layout_width="286dp"
        android:layout_height="52dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:fontFamily="@font/press_start_2p"
        android:hint="Colour Text (orange/green)"
        android:inputType="textPersonName"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        app:layout_constraintVertical_bias="0.005" />

    <EditText
        android:id="@+id/backColour"
        android:layout_width="286dp"
        android:layout_height="52dp"
        android:ems="10"
        android:fontFamily="@font/press_start_2p"
        android:hint="Background (blue/purple)"
        android:inputType="textPersonName"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreMultiply"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/userNameInput"
        android:layout_width="206dp"
        android:layout_height="52dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="204dp"
        android:ems="10"
        android:fontFamily="@font/press_start_2p"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="206dp"
        android:layout_height="52dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="260dp"
        android:ems="10"
        android:fontFamily="@font/press_start_2p"
        android:hint="Password"
        android:inputType="textPersonName"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/scoreMultiply"
        android:layout_width="286dp"
        android:layout_height="52dp"
        android:ems="10"
        android:fontFamily="@font/press_start_2p"
        android:hint="Num. to Multiply Score"
        android:inputType="textPersonName"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colourInput"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/closeButton"
        android:layout_width="61dp"
        android:layout_height="52dp"
        android:background="#FF9ABDFF"
        android:fontFamily="@font/press_start_2p"
        android:onClick="close"
        android:text="X"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.306" />

    <TextView
        android:id="@+id/shadowView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#72000000"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>